[tool.poetry]
name = "daytime-countdown-app"
version = "0.1.0"
description = ""
authors = ["Blackprincex <appiahboaduprince@gmail.com>"]
readme = "README.md"
packages = [{include = "daytime_countdown_app"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.5.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
